[gd_scene load_steps=17 format=3 uid="uid://bojveau2n1sml"]

[ext_resource type="Script" path="res://Characters/samurai_(enemy).gd" id="1_52f07"]
[ext_resource type="Texture2D" uid="uid://muq1ju4pqhja" path="res://Graphics/Sprites/Samurai-sheet.png" id="1_vybw1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p0fii"]
atlas = ExtResource("1_vybw1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fa4h"]
atlas = ExtResource("1_vybw1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2gfh"]
atlas = ExtResource("1_vybw1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxs8i"]
atlas = ExtResource("1_vybw1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g1ng"]
atlas = ExtResource("1_vybw1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebyhl"]
atlas = ExtResource("1_vybw1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuvwt"]
atlas = ExtResource("1_vybw1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swbrp"]
atlas = ExtResource("1_vybw1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1ibj"]
atlas = ExtResource("1_vybw1")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g70t"]
atlas = ExtResource("1_vybw1")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_olctf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0fii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fa4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2gfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxs8i")
}],
"loop": true,
"name": &"stay",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g1ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebyhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuvwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swbrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1ibj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g70t")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tbrnh"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7n45n"]
radius = 63.0079

[sub_resource type="CircleShape2D" id="CircleShape2D_qypct"]
radius = 36.0313

[node name="samurai (enemy)" type="CharacterBody2D"]
position = Vector2(215, 66)
script = ExtResource("1_52f07")
metadata/_edit_vertical_guides_ = []

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_olctf")
animation = &"stay"
frame_progress = 0.11698

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_tbrnh")

[node name="dectetion_area" type="Area2D" parent="."]
visible = false
position = Vector2(1, -1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="dectetion_area"]
shape = SubResource("CircleShape2D_7n45n")

[node name="hitbox_area" type="Area2D" parent="."]
rotation = -0.0222887

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_area"]
position = Vector2(2, 1)
shape = SubResource("CircleShape2D_qypct")

[node name="takeDamageCooldown" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="dectetion_area" to="." method="_on_dectetion_area_body_entered"]
[connection signal="body_exited" from="dectetion_area" to="." method="_on_dectetion_area_body_exited"]
[connection signal="body_entered" from="hitbox_area" to="." method="_on_hitbox_area_body_entered"]
[connection signal="body_exited" from="hitbox_area" to="." method="_on_hitbox_area_body_exited"]
[connection signal="timeout" from="takeDamageCooldown" to="." method="_on_take_damage_cooldown_timeout"]
